kube/service.yml
kind: Service
apiVersion: v1
metadata:
  name: app-report-service
spec:
  selector:
    app: app-report
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3838
