kube/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-report-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - report.data-container.net
    secretName: letsencrypt-report
  rules:
  - host: report.data-container.net
    http:
      paths:
      - path: /
        backend:
          serviceName: app-report-service
          servicePort: 80
